feat: [CDS-52329]: TFC add support for sentinel policies (#44423)
* feat:[CDS-52326]: Terraform Cloud rollback step delegate side

* feat:[CDS-52326]: remove unused imports

* feat:[CDS-52329]: Add support for sentinel policies

* feat:[CDS-52329]: Add support for sentinel policies and refactor